# lambdy

./: README.md  lambdy.cabal  stack.yaml
app/: lambdy.hs
lambdy/samples/: hello.lambdy
papillon/examples/: config.hs
src/Language/Lambdy/: Parser.hs
