name:                lambdy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambdy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lambdy
  hs-source-dirs:      app, src
  main-is:             lambdy.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, lambdy, papillon
  default-language:    Haskell2010
  other-modules:       Language.Lambdy.Parser

executable arith
  hs-source-dirs:      papillon/examples
  main-is:             arith.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, lambdy, papillon
  default-language:    Haskell2010

executable config
  hs-source-dirs:      papillon/examples
  main-is:             config.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, lambdy, papillon
  default-language:    Haskell2010

test-suite lambdy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambdy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambdy
